--- a/samples/hellosceneform/app/src/main/AndroidManifest.xml
+++ b/samples/hellosceneform/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.google.ar.sceneform.samples.hellosceneform">
     <!-- Always needed for AR. -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- This tag indicates that this application requires ARCore. This results in the application
@@ -28,7 +29,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="false"
+        android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <!-- This tag indicates that this application requires ARCore. This results in the
             application only being visible in the Google Play Store on devices that support
